# pplx

./: .gitignore  README.md  capture_interactive.py  cdp_har.py  install.sh  pplx_cli.py  pplx_mcp_server.py  pyproject.toml
.claude/memory/: MEMORY.md  feedback_plugin_dev_validation.md
debug/docs/: threads.md
debug/network/: artifacts.har  connectorts.har  debug.har  library-ad-to-existing-space.har  library.har  spaces-add-links-instructions.har  spaces-skills.har  spaces.har  workflows-alerts.har
debug/ui/: chat.html
install/: install-plugin.sh  linux.sh  macos.sh  windows.ps1
perplexity-grounding/: README.md
perplexity-grounding/.claude-plugin/: plugin.json
perplexity-grounding/agents/: stale-doc-detector.md
perplexity-grounding/commands/: p-ground.md  p-research.md  p-verify-docs.md
perplexity-grounding/hooks/: hooks.json
pplx/: __init__.py  bw_cookies.py  bws_auth.py  client.py  config.py
pplx-plugin/: .gitignore  README.md
pplx-plugin/.claude-plugin/: plugin.json
pplx-plugin/agents/: knowledge-curator.md  stale-doc-detector.md  thread-analyzer.md
pplx-plugin/commands/: pplx-assets.md  pplx-bws-setup.md  pplx-cli-check.md  pplx-orchestrate.md  pplx-persist.md  pplx-pro-optimizer.md  pplx-research.md  pplx-settings.md  pplx-space.md  pplx-threads.md  pplx-upload.md
pplx-plugin/hooks/: hooks.json
pplx-plugin/scripts/: pplx-bw-env.sh  pplx-common.sh  (+7 more)
scripts/: __init__.py  backup_perplexity.py  capture_interactive.py  cdp_har.py  diagnose.py  extract_otp.py  login.py  refresh_cookies.py  setup_bws_secret.py  test_pplx_cli.py
(+51 files in other folders)
